<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sage_green"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/multicalc_text_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="18sp"
        android:layout_margin="0sp"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        android:textAlignment="center"
        android:textColor="@color/rich_black"
        android:background="@color/white"
        />

    <TextView
        android:id="@+id/tip_calc_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_calc_name"
        android:layout_marginTop="7sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@color/rich_black"
        android:textSize="15sp"
        android:textColor="@color/white"
        />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/money"
        android:layout_gravity="center_horizontal"
        android:paddingTop="7dp"
        android:contentDescription="@string/img_one"
        />

    <Button
        android:id="@+id/tip_calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7sp"
        android:text="@string/use_calc"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"

        />

    <TextView
        android:id="@+id/gas_calc_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_calc_name"
        android:layout_marginTop="7sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@color/rich_black"
        android:textSize="15sp"
        android:textColor="@color/white"
        />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/gas_pump"
        android:layout_gravity="center_horizontal"
        android:paddingTop="7dp"
        android:contentDescription="@string/img_two"
        />

    <Button
        android:id="@+id/gas_calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7sp"
        android:text="@string/use_calc"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/age_calc_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_calc_name"
        android:layout_marginTop="7sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@color/rich_black"
        android:textSize="15sp"
        android:textColor="@color/white"
        />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/cat_and_dog"
        android:layout_gravity="center_horizontal"
        android:paddingTop="7dp"
        android:contentDescription="@string/img_three"
        />

    <Button
        android:id="@+id/age_calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7sp"
        android:text="@string/use_calc"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"
        />



</LinearLayout>
