<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sage_green"
    tools:context=".TipCalculator">

    <TextView
        android:id="@+id/tip_calc_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rich_black"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingLeft="20dp"
        android:text="@string/first_calc_name"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btn_backid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:layout_marginTop="10dp"

        app:layout_constraintRight_toLeftOf="@id/img_money"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_calc_banner"
        />

    <ImageView
        android:id="@+id/img_money"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/money"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/img_one"

        app:layout_constraintTop_toBottomOf="@id/tip_calc_banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_qu_one"
        android:labelFor="@id/edittxt_tip_total"
        android:layout_marginTop="30dp"
        android:textSize="17dp"
        android:background="@color/rich_black"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@id/img_money"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />


    <EditText
        android:id="@+id/edittxt_tip_total"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="7"
        android:inputType="numberDecimal"
        android:background="@color/white"
        android:hint="@string/zero"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_total"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txt_percent"
        android:labelFor="@id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percent"
        android:layout_marginTop="30dp"
        android:textSize="17sp"
        android:background="@color/rich_black"
        android:textColor="@color/white"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittxt_tip_total"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center_horizontal"

        app:layout_constraintTop_toBottomOf="@id/txt_percent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <RadioButton
            android:id="@+id/rbtn_one"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ten_percent"
            android:textSize="15sp"
            android:onClick="onRBOneClicked"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtn_two"
            android:text="@string/fifteen_percent"
            android:textSize="15sp"
            android:onClick="onRBTwoClicked"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtn_three"
            android:text="@string/twenty_percent"
            android:textSize="15sp"
            android:onClick="onRBThreeClicked"
            />
    </RadioGroup>


    <Button
        android:id="@+id/btn_tip_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_final_btn"
        android:layout_marginTop="10dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_tip_calc"
        >

        <TextView
            android:id="@+id/tviewBasic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basicTView"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tipToBeCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:onClick="onCalculate"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
